@@ -6,6 +6,6 @@ Build-Depends: debhelper (>= 4.0.0), fakeroot
 
 Package: linuxmuster-cachingserver-satellite
 Architecture: all
-Depends: linuxmuster-cachingserver-linbo7, isc-dhcp-server, python3-fastapi, uvicorn
+Depends: linuxmuster-cachingserver-linbo7, isc-dhcp-server, python3-pip
 Homepage: www.netzint.de
 Description: Linuxmuster Cachingserver for Satellite-Server
